# opencv_add_contrib

./: CMakeLists.txt  README.md
modules/core/: CMakeLists.txt
modules/dnn/: CMakeLists.txt
modules/python/: CMakeLists.txt
modules/python/python2/: CMakeLists.txt
modules/superres/: CMakeLists.txt
opencv_contrib-3.4.1/modules/aruco/: CMakeLists.txt
opencv_contrib-3.4.1/modules/bgsegm/: CMakeLists.txt
opencv_contrib-3.4.1/modules/bioinspired/: CMakeLists.txt
opencv_contrib-3.4.1/modules/ccalib/: CMakeLists.txt
opencv_contrib-3.4.1/modules/cnn_3dobj/: CMakeLists.txt
opencv_contrib-3.4.1/modules/cvv/: CMakeLists.txt
opencv_contrib-3.4.1/modules/datasets/: CMakeLists.txt
opencv_contrib-3.4.1/modules/dnn_modern/: CMakeLists.txt
opencv_contrib-3.4.1/modules/dnn_objdetect/: CMakeLists.txt
opencv_contrib-3.4.1/modules/dpm/: CMakeLists.txt
opencv_contrib-3.4.1/modules/face/: CMakeLists.txt
opencv_contrib-3.4.1/modules/freetype/: CMakeLists.txt
opencv_contrib-3.4.1/modules/fuzzy/: CMakeLists.txt
opencv_contrib-3.4.1/modules/hdf/: CMakeLists.txt
opencv_contrib-3.4.1/modules/hfs/: CMakeLists.txt
opencv_contrib-3.4.1/modules/img_hash/: CMakeLists.txt
opencv_contrib-3.4.1/modules/line_descriptor/: CMakeLists.txt
opencv_contrib-3.4.1/modules/matlab/: CMakeLists.txt
opencv_contrib-3.4.1/modules/optflow/: CMakeLists.txt
opencv_contrib-3.4.1/modules/ovis/: CMakeLists.txt
opencv_contrib-3.4.1/modules/phase_unwrapping/: CMakeLists.txt
opencv_contrib-3.4.1/modules/plot/: CMakeLists.txt
opencv_contrib-3.4.1/modules/reg/: CMakeLists.txt
(+12 files in other folders)
